*Version 1.1.1
* Adding additional examples
* Added ability to remove Data Point From data provider
* Added ability to de-register points for RealtimeDataProvider
* Added ability to override data store in GridDisplay
* Updated Documentation
* Now passing point xid is onOpen method for MangoAPI.registerForPointEvents

*Version 1.1.0
* Added Javascript API version 2.0
* Added documentation for API
* New examples for API version 2.0
* Upgraded to work with core version 2.6.x
* Modified RealTimeModel to use 'timestamp' instead of 'time' for its timestamp

*Version 1.0.4*
* Bugfixes
* Add RealtimeDataProvider and PointEventManager

*Version 1.0.3*
* CAUTION: Removed persist path to allow full upgrade of module's web folder. Ensure any custom work is moved to the overrides folder in the core.
* To add new files to this module place them in the core/overrides/web/modules/dashboards/web/ folder with an identical structure
* Added ability to override files using the mango-javascript URL mapping prefix

*Version 1.0.2
* Various bugfixes and enhancements

*Version 1.0.1*
* Fixed bug in mangoApi Javascript Date formatter for Timezones that are +GMT 

*Version 1.0.0*
* Initial Release